# pyccel

./: .codacy.yml  .coveragerc  .dict_custom.txt  .docstr.yaml  .docstr_coverage  .gitignore  .gitmodules  .markdownlint.json  .pylintrc  .pyspelling.yml  .reviewdog.yml  .spellcheck.yml  .travis.yml  .typos.toml  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Main.java  README.md  README.rst  TODO.rst  bandit.yml  basic_test.py  checkCoverage.py  count.py  ex5.py  ex6.py  ex7.py  ex_f1.py  ex_function.py  ex_mpi.py  ex_openmp.py  ex_redbaron.py  example.py  file.py  fst_to_ast.py  functional_stmt.py  (+24 more)
pyccel/: CMakeLists.txt  __init__.py  codegen.py  complexity.py  decorators.py  epyccel.py  functional.py  grammar.tx  lambdify.py  parser.py  stdlib.py  syntax.py  version.py
pyccel/ast/: __init__.py  basic.py  bind_c.py  bitwise_operators.py  builtin_imports.py  builtins.py  c_concepts.py  class_defs.py  cmathext.py  core.py  cuda.py  cudaext.py  cudatypes.py  cudext.py  cupyext.py  cwrapper.py  datatypes.py  f2py.py  fortran.py  fortran_concepts.py  functional.py  functionalexpr.py  headers.py  internals.py  itertoolsext.py  list_wrapper.py  literals.py  low_level_macros.py  low_level_tools.py  macros.py  mathext.py  new_name.py  numbaext.py  numbers.py  numpy_wrapper.py  numpyext.py  numpytypes.py  object_address.py  omp.py  operators.py  (+13 more)
pyccel/ast/builtin_methods/: dict_methods.py  list_methods.py  set_methods.py
pyccel/ast/builtin_objects/: complex_functions.py  list_functions.py
pyccel/ast/parallel/: __init__.py  basic.py  communicator.py  group.py  mpi.py  openacc.py  openmp.py
pyccel/calculus/: __init__.py  finite_differences.py
pyccel/clapp/plaf/: __init__.py  matrix.py  utils.py
pyccel/clapp/spl/: __init__.py  bspline.py  utils.py
pyccel/codegen/: __init__.py  cmake.py  codegen.py  compiler.py  cwrapper.py  f2py.py  fech.py  fffi_gen.py  lambdify.py  main.py  make_pipeline.py  my_main.py  pipeline.py  python_wrapper.py  test.py  titi.py  utilities.py  utilities_old.py  wrap_pipeline.py  wrappergen.py
pyccel/codegen/build_generation/: build_gen.py  cmake_gen.py  meson_gen.py
pyccel/codegen/compiling/: basic.py  compilers.py  file_locks.py  library_config.py  project.py
pyccel/codegen/printing/: __init__.py  ccode.py  ccudacode.py  codeprinter.py  cppcode.py  cucode.py  cudaccode.py  cwrappercode.py  cwrappercode.py.wrapper_part_2  fcode.py  luacode.py  new.py  pybindcode.py  pycode.py  pycode.py.save  pyhcode.py
pyccel/codegen/templates/: CMakeLists.txt
pyccel/codegen/wrapper/: c_to_python_wrapper.py  cpp_to_python_wrapper.py  cuda_to_c_wrapper.py  fortran_to_c_wrapper.py  wrapper.py
pyccel/commands/: argparse_helpers.py  build.py  console.py  epyccel.py  ipyccel.py  lambdify.py  pyccel_clean.py  pyccel_compile.py  pyccel_config.py  pyccel_init.py  pyccel_make.py  pyccel_test.py  pyccel_wrap.py  quickstart.py
pyccel/compilers/: default_compilers.py  generate_default.py
pyccel/complexity/: __init__.py  arithmetic.py  basic.py  intensity.py  memory.py  operation.py  test_arithmetic.py  test_intensity.py  test_memory.py
pyccel/complexity/scripts/: ex1.py  ex2.py
pyccel/core/: __init__.py
pyccel/cuda/: __init__.py  cuda_arrays.py  cuda_sync_primitives.py
pyccel/errors/: __init__.py  errors.py  messages.py
pyccel/extensions/Openmp/: ast.py  extension.py  omp.py  openmp_4_5.py  openmp_5_0.py
pyccel/extensions/STC_Extensions/: Set_extensions.c  Set_extensions.h
pyccel/functional/: __init__.py  ast.py  compatibility.py  core.py  datatypes.py  glossary.py  grammar.tx  interface.py  lambdify.py  parser.py  printing.py  semantic.py  syntax.py  utilities.py
pyccel/functional/tests/: test_compatibility.py  test_parser.py  test_typing_math.py  test_user_omp.py
pyccel/imports/: __init__.py  grammar.tx  syntax.py  utilities.py
pyccel/naming/: __init__.py  ccudanameclashchecker.py  cmakenameclashchecker.py  cnameclashchecker.py  cnameclasschecker.py  cppnameclashchecker.py  cudanameclashchecker.py  fortrannameclashchecker.py  fortrannameclasschecker.py  languagenameclashchecker.py  mesonnameclashchecker.py  nameclashchecker.py  pythonnameclashchecker.py
pyccel/openmp/: __init__.py  grammar.tx  openmp.py  openmp.tx  syntax.py  test.py
pyccel/parallel/: __init__.py  communicator.py  group.py  mpi.py  openmp.py
pyccel/parser/: __init__.py  base.py  errors.py  extend_tree.py  messages.py  parser.py  scope.py  semantic.py  syntactic.py  utilities.py
pyccel/parser/grammar/: headers.tx  himi.tx  imports.tx  openacc.tx  openmp.tx  pyccel.tx  types.tx
pyccel/parser/syntax/: __init__.py  basic.py  core.py  headers.py  himi.py  openacc.py  openmp.py
pyccel/patterns/: import.tx  utilities.py
pyccel/plugins/Openmp/: omp.py  openmp_4_5.py  openmp_5_0.py  plugin.py
pyccel/printers/: __init__.py  ccode.py  codeprinter.py  fcode.py  luacode.py
pyccel/stdlib/: __init__.py  stdlib.py
pyccel/stdlib/STC_Extensions/: Arc_extensions.h  CMakeLists.txt  CSpan_extensions.h  Common_extensions.h  Dict_extensions.h  List_extensions.h  Managed_memory.h  Set_extensions.h  cstr.c  meson.build
pyccel/stdlib/clapp/: __init__.py
pyccel/stdlib/cuda/: ndarrays_kernels.cu  ndarrays_kernels.h
pyccel/stdlib/cuda_ndarrays/: cuda_ndarrays.cu  cuda_ndarrays.h
pyccel/stdlib/cwrapper/: CMakeLists.txt  bind_c_tools.f90  cwrapper.c  cwrapper.h  cwrapper_ndarrays.c  cwrapper_ndarrays.h  meson.build  numpy_version.h  test.c
pyccel/stdlib/cwrapper_lists/: list_wrapper.c  list_wrapper.h  setup.py  wrapper_testing.c
pyccel/stdlib/cwrapper_ndarrays/: cwrapper_ndarrays.c  cwrapper_ndarrays.h
pyccel/stdlib/gFTL_functions/: CMakeLists.txt  Map_extensions.inc  Set_extensions.inc  Vector_extensions.inc  meson.build
pyccel/stdlib/internal/: blas.pyh  blas.pyi  (+21 more)
pyccel/symbolic/: __init__.py  calculus.py  gelato.py  lambdify.py
pyccel/types/: __init__.py  ast.py  routines.py
pyccel/utilities/: codegen.py  extensions.py  introspect.py  metaclasses.py  pluginmanager.py  plugins.py  stage.py  status.py  strings.py  tools.py  util.py
(+1948 files in other folders)
