[build-system]
requires = ["hatchling",]
build-backend = "hatchling.build"

[project]
name = "pyccel"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
authors = [
    { name = "Pyccel development team" },
]
keywords = [
    "math",
]
dependencies = [
    "filelock >= 3.4.0",
    "numpy >= 1.16, != 2.0.*",
    "sympy >= 1.2",
    "termcolor >= 1.0.0",
    "textx >= 2.2",
    "packaging",
    "immutabledict >= 4.0.0",
    "ninja",
    "meson",
]

[project.optional-dependencies]
test = [
    "coverage >= 3.1",
    "mpi4py >= 3.0.0",
    "pytest >= 7.0",
    "pytest-xdist >= 1.16",
    "pytest-mpi",
    "scipy >= 1.5.0",
    "tblib >= 1.7.0",
    "numpydoc >= 1.8.0",
]

[project.scripts]
pyccel = "pyccel.commands.console:pyccel"
pyccel-make = "pyccel.commands.pyccel_make:pyccel_make_command"
pyccel-wrap = "pyccel.commands.pyccel_wrap:pyccel_wrap_command"
pyccel-clean = "pyccel.commands.pyccel_clean:pyccel_clean_command"
pyccel-test = "pyccel.commands.pyccel_test:pyccel_test_command"

[project.urls]
Homepage = "https://github.com/pyccel/pyccel"
Documentation = "https://pyccel.github.io/pyccel/"
Source = "https://github.com/pyccel/pyccel"
Tracker = "https://github.com/pyccel/pyccel/issues"
Changelog = "https://github.com/pyccel/pyccel/blob/devel/CHANGELOG.md"

[tool.hatch.version]
path = "pyccel/version.py"

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.pyccel",
  "pyccel/extensions/gFTL/install/GFTL-1.13/include/v2"
]
include = [
  "pyccel/**/*.py",
  "pyccel/**/*.pyi",
  "pyccel/parser/grammar/*.tx",
  "pyccel/stdlib/**/*.h",
  "pyccel/stdlib/**/*.c",
  "pyccel/stdlib/**/*.f90",
  "pyccel/stdlib/**/*.inc",
  "pyccel/extensions/STC/include",
  "pyccel/extensions/STC/src/*",
  "pyccel/extensions/STC/tests/*",
  "pyccel/extensions/STC/examples/*",
  "pyccel/extensions/STC/Makefile",
  "pyccel/extensions/STC/meson.build",
  "pyccel/extensions/STC/meson_options.txt"
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "install_scripts/hook.py"
require-runtime-dependencies = true
