[build-system]
requires = ["scikit-build-core >= 0.9", "meson"]
build-backend = "scikit_build_core.build"

[project]
name = "pyccel"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
authors = [
    { name = "Pyccel development team" },
]
keywords = [
    "math",
]
dependencies = [
    "filelock >= 3.4.0",
    "numpy >= 2.1",
    "sympy >= 1.2",
    "termcolor >= 1.0.0",
    "textx >= 2.2",
    "packaging",
    "immutabledict >= 4.0.0",
    "ninja",
    "meson",
]

[project.optional-dependencies]
test = [
    "coverage >= 3.1",
    "mpi4py >= 3.0.0",
    "pytest >= 7.0",
    "pytest-xdist >= 1.16",
    "pytest-mpi",
    "scipy >= 1.5.0",
    "tblib >= 1.7.0",
    "numpydoc >= 1.8.0",
]

[project.scripts]
pyccel = "pyccel.commands.console:pyccel"
pyccel-make = "pyccel.commands.pyccel_make:pyccel_make_command"
pyccel-wrap = "pyccel.commands.pyccel_wrap:pyccel_wrap_command"
pyccel-clean = "pyccel.commands.pyccel_clean:pyccel_clean_command"
pyccel-test = "pyccel.commands.pyccel_test:pyccel_test_command"

[project.urls]
Homepage = "https://github.com/pyccel/pyccel"
Documentation = "https://pyccel.github.io/pyccel/"
Source = "https://github.com/pyccel/pyccel"
Tracker = "https://github.com/pyccel/pyccel/issues"
Changelog = "https://github.com/pyccel/pyccel/blob/devel/CHANGELOG.md"

[tool.scikit-build]
# The build type to use when building the project.
cmake.build-type = "Release"

# The source directory to use when building the project.
cmake.source-dir = "pyccel"

# Use Make as a fallback if a suitable Ninja executable is not found.
ninja.make-fallback = true

# The logging level to display.
logging.level = "INFO"

# Hook sdist build to insert gFTL compilation and avoid m4 requirement
sdist.cmake = true

sdist.include = [
  "AUTHOR",
  "CHANGELOG.md",
  "CITATION.cff",
  "LICENSE",
  "pyproject.toml",
  "README.md",
  "pyccel/**/*.py",
  "pyccel/**/*.pyi",
  "pyccel/CMakeLists.txt",
  "pyccel/parser/grammar/*.tx",
  "pyccel/stdlib/**/*.h",
  "pyccel/stdlib/**/*.c",
  "pyccel/stdlib/**/*.f90",
  "pyccel/stdlib/**/*.inc",
  "pyccel/stdlib/**/CMakeLists.txt",
  "pyccel/stdlib/**/meson.build",
  "pyccel/extensions/STC/docs",
  "pyccel/extensions/STC/include",
  "pyccel/extensions/STC/src/*",
  "pyccel/extensions/STC/tests/*",
  "pyccel/extensions/STC/examples/*",
  "pyccel/extensions/STC/Makefile",
  "pyccel/extensions/STC/meson.build",
  "pyccel/extensions/STC/meson_options.txt",
  "pyccel/extensions/gftl_install"
]

sdist.exclude = ['*']

[tool.scikit-build.metadata.version]
# Set version info
provider = "scikit_build_core.metadata.regex"
input = "pyccel/version.py"
