[metadata]
name     = pyccel
version  = attr:pyccel.version.__version__
author   = Pyccel development team
email    = pyccel@googlegroups.com
url      = https://github.com/pyccel/pyccel
descr    = Python extension language using accelerators.
keywords = math
license  = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy >= 1.16, < 1.24
    sympy>=1.2
    termcolor
    textx>=2.2
    filelock
python_requires = >= 3.7
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    pyccel = pyccel.commands.console:pyccel
    pyccel-clean = pyccel.commands.pyccel_clean:pyccel_clean_command
    pyccel-init = pyccel.commands.pyccel_init:pyccel_init_command
